// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`summary .getCityById should get city by ID 1`] = `
Object {
  "errors": true,
  "messages": "Expected required id. Usage: .getCityByID(id)",
***REMOVED***
`;

exports[`summary .getCityByLatLng should get city by lat, lng 1`] = `
Object {
  "error": "data not found",
  "errors": true,
  "messages": null,
***REMOVED***
`;

exports[`summary .getPropertyByAddress should get property by address lookup 1`] = `
Object {
  "error": "data not found",
  "errors": true,
  "messages": null,
***REMOVED***
`;

exports[`summary .getPropertyByFSID should get property by ID 1`] = `
Object {
  "error": "data not found",
  "errors": true,
  "messages": null,
***REMOVED***
`;

exports[`summary .getPropertyByLatLng should get property by lat, lng 1`] = `
Object {
  "error": "data not found",
  "errors": true,
  "messages": null,
***REMOVED***
`;
